; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_evnt_handler.c_hci_event_unsol_flowcontrol_handler.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_evnt_handler.c_hci_event_unsol_flowcontrol_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@HCI_EVENT_HEADER_SIZE = common dso_local global i32 0, align 4
@FLOW_CONTROL_EVENT_FREE_BUFFS_OFFSET = common dso_local global i32 0, align 4
@FLOW_CONTROL_EVENT_SIZE = common dso_local global i32 0, align 4
@tSLInformation = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@ESUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @hci_event_unsol_flowcontrol_handler(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %6, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @HCI_EVENT_HEADER_SIZE, align 4
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @STREAM_TO_UINT16(i32* %8, i32 %9, i64 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @HCI_EVENT_HEADER_SIZE, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = getelementptr inbounds i32, i32* %15, i64 8
  store i32* %16, i32** %7, align 8
  store i64 0, i64* %3, align 8
  store i64 0, i64* %5, align 8
  br label %17

17:                                               ; preds = %33, %1
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = icmp slt i64 %18, %19
  br i1 %20, label %21, label %36

21:                                               ; preds = %17
  %22 = load i32*, i32** %7, align 8
  %23 = load i32, i32* @FLOW_CONTROL_EVENT_FREE_BUFFS_OFFSET, align 4
  %24 = load i64, i64* %4, align 8
  %25 = call i32 @STREAM_TO_UINT16(i32* %22, i32 %23, i64 %24)
  %26 = load i64, i64* %4, align 8
  %27 = load i64, i64* %3, align 8
  %28 = add nsw i64 %27, %26
  store i64 %28, i64* %3, align 8
  %29 = load i32, i32* @FLOW_CONTROL_EVENT_SIZE, align 4
  %30 = load i32*, i32** %7, align 8
  %31 = sext i32 %29 to i64
  %32 = getelementptr inbounds i32, i32* %30, i64 %31
  store i32* %32, i32** %7, align 8
  br label %33

33:                                               ; preds = %21
  %34 = load i64, i64* %5, align 8
  %35 = add nsw i64 %34, 1
  store i64 %35, i64* %5, align 8
  br label %17

36:                                               ; preds = %17
  %37 = load i64, i64* %3, align 8
  %38 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tSLInformation, i32 0, i32 1), align 4
  %39 = sext i32 %38 to i64
  %40 = add nsw i64 %39, %37
  %41 = trunc i64 %40 to i32
  store i32 %41, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tSLInformation, i32 0, i32 1), align 4
  %42 = load i64, i64* %3, align 8
  %43 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tSLInformation, i32 0, i32 0), align 4
  %44 = sext i32 %43 to i64
  %45 = add nsw i64 %44, %42
  %46 = trunc i64 %45 to i32
  store i32 %46, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tSLInformation, i32 0, i32 0), align 4
  %47 = load i64, i64* @ESUCCESS, align 8
  ret i64 %47
}

declare dso_local i32 @STREAM_TO_UINT16(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
